removed fixed footer image, set overflow hidden javascript code

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,3 +30,7 @@ body {
   background-color: #1d1d1d;
   box-sizing: border-box;
 }
+
+.menu--is-active {
+  overflow: hidden;
+}
