--- a/src/styles/screen/screen-footer.scss
+++ b/src/styles/screen/screen-footer.scss
@@ -105,7 +105,8 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  position: sticky;
-  bottom: 0;
-  z-index: -1;
+
+  // position: sticky;
+  // bottom: 0;
+  // z-index: -1;
 }
