--- a/src/styles/screen/screen-menu.scss
+++ b/src/styles/screen/screen-menu.scss
@@ -102,6 +102,9 @@
       line-height: 16px;
       position: relative;
   }
+  &::-webkit-scrollbar {
+       display: none;
+     }
 }
 
 .test-ride {
